# aes

./: .gitignore  Cargo.toml  LICENSE  aes.nix  deny.toml  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: audit.yaml  ci.yaml  release.yaml
crates/aes/: Cargo.toml
crates/aes/src/: errors.rs  lib.rs  main.rs
crates/aes/src/cli/: dump.rs  export.rs  mod.rs
crates/aes/src/core/: context.rs  fs.rs  init.rs  mod.rs  reporter.rs  runner.rs
crates/aes_allocator/: Cargo.toml
crates/aes_allocator/src/: lib.rs
crates/aes_ast/: Cargo.toml
crates/aes_ast/src/: ast.rs  expr.rs  lib.rs  test_def.rs  type_def.rs
crates/aes_ast_macros/: Cargo.toml
crates/aes_ast_macros/src/: lib.rs
crates/aes_compiler/: Cargo.toml
crates/aes_compiler/src/: export.rs  lib.rs
crates/aes_compiler/src/snapshots/: aes_compiler__export__tests__actors__single_direct_actor.snap  aes_compiler__export__tests__actors__single_userset_actor.snap  aes_compiler__export__tests__actors__three_way_union.snap  aes_compiler__export__tests__actors__union_of_direct_actors.snap  aes_compiler__export__tests__actors__union_of_mixed_actors.snap  aes_compiler__export__tests__expressions__binary_exclusion.snap  aes_compiler__export__tests__expressions__binary_intersection.snap  aes_compiler__export__tests__expressions__binary_union.snap  aes_compiler__export__tests__expressions__exclusion_not_flattened.snap  aes_compiler__export__tests__expressions__mixed_operators_precedence.snap  aes_compiler__export__tests__expressions__nary_intersection_flattening.snap  aes_compiler__export__tests__expressions__nary_union_flattening.snap  aes_compiler__export__tests__expressions__parenthesized_grouping.snap  aes_compiler__export__tests__expressions__self_ref.snap  aes_compiler__export__tests__expressions__traversal.snap  aes_compiler__export__tests__type_defs__empty_type.snap  aes_compiler__export__tests__type_defs__full_github_sample.snap  aes_compiler__export__tests__type_defs__multiple_types.snap  aes_compiler__export__tests__type_defs__type_with_permission_only.snap  (+1 more)
crates/aes_foundation/: Cargo.toml
crates/aes_foundation/src/: const_assert.rs  diagnostic.rs  id.rs  interner.rs  lib.rs  prelude.rs  span.rs  symbols.rs  vfs.rs
crates/aes_ir/: Cargo.toml
crates/aes_ir/src/: client.rs  helpers.rs  lib.rs
crates/aes_parser/: Cargo.toml
crates/aes_parser/src/: errors.rs  lib.rs
crates/aes_parser/src/lexer/: mod.rs  (+2 more)
crates/aes_semantic/: Cargo.toml
crates/aes_semantic/src/: declare.rs  errors.rs  index.rs  lib.rs  schema.rs  verify.rs
crates/aes_semantic/src/snapshots/: aes_semantic__declare__tests__declare_permission__duplicate_permission_in_same_type_emits_error.snap  aes_semantic__declare__tests__declare_relation__duplicate_relation_in_same_type_emits_error.snap  aes_semantic__declare__tests__declare_type__duplicate_type_emits_error.snap  aes_semantic__declare__tests__declare_type__duplicate_type_stops_walking_members.snap  aes_semantic__declare__tests__scope_collision__permission_then_relation_same_name_emits_error.snap  aes_semantic__declare__tests__scope_collision__relation_then_permission_same_name_emits_error.snap  aes_semantic__verify__tests__relation_operations__exclusion_in_relation_emits_error.snap  aes_semantic__verify__tests__relation_operations__intersection_in_relation_emits_error.snap  aes_semantic__verify__tests__self_ref__self_ref_in_relation_emits_error.snap  aes_semantic__verify__tests__self_ref__self_ref_unknown_relation_emits_error.snap  aes_semantic__verify__tests__traversal__traversal_checks_all_union_targets.snap  aes_semantic__verify__tests__traversal__traversal_in_relation_emits_error.snap  aes_semantic__verify__tests__traversal__traversal_on_permission_emits_error.snap  aes_semantic__verify__tests__traversal__traversal_unknown_permission_on_target_type_emits_error.snap  aes_semantic__verify__tests__traversal__traversal_unknown_relation_emits_error.snap  aes_semantic__verify__tests__type_ref__type_ref_in_permission_emits_error.snap  aes_semantic__verify__tests__type_ref__unknown_type_ref_emits_error.snap  aes_semantic__verify__tests__userset_type_ref__userset_ref_in_permission_emits_error.snap  aes_semantic__verify__tests__userset_type_ref__userset_ref_to_permission_emits_error.snap  aes_semantic__verify__tests__userset_type_ref__userset_ref_unknown_member_emits_error.snap  aes_semantic__verify__tests__userset_type_ref__userset_ref_unknown_type_emits_error.snap
crates/aes_testing/: Cargo.toml
crates/aes_testing/src/: ast.rs  diagnostic.rs  file.rs  generate.rs  lib.rs  reporter.rs
crates/aes_visit/: Cargo.toml
crates/aes_visit/src/: expr.rs  lib.rs  test_def.rs  tests.rs  type_def.rs
(+44 files in other folders)
