[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Rizescu Iulian-Ştefan <iulian.stefan.rizescu@gmail.com>"]
license = "MIT"
repository = "https://github.com/aegis-run/aes"
description = "Toolchain for the .aes fine-grained Aegis schema language"
version = "0.0.1"

edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
aes_allocator = { version = "0.0.1", path="crates/aes_allocator" }
aes_ast = { version = "0.0.1", path="crates/aes_ast" }
aes_ast_macros = { version = "0.0.1", path="crates/aes_ast_macros" }
aes_foundation = { version = "0.0.1", path="crates/aes_foundation" }
aes_parser = { version = "0.0.1", path="crates/aes_parser" }

insta = "1.46.3"
miette = { version = "7.6.0", features = ["fancy"] }
proptest = "1.10.0"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"

[profile.dev]
opt-level = 1
debug = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
opt-level = 2

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
indexing_slicing = "deny"

large_stack_arrays = "warn"
box_collection = "warn"
manual_memcpy = "warn"
collection_is_never_read = "deny"

module_name_repetitions = "deny"
cast_lossless = "deny"
shadow_unrelated = "deny"

match_same_arms = "deny"
