[package]
name = "aes_allocator"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
bumpalo = { version = "3.20.2", features = ["boxed", "collections"] }
