[package]
name = "aes_ir"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
prost.workspace = true
thiserror.workspace = true
tonic = "0.14.6"
tonic-prost = "0.14.6"
