[package]
name = "aes_semantic"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
aes_allocator.workspace = true
aes_ast.workspace = true
aes_foundation.workspace = true
aes_visit.workspace = true

rustc-hash.workspace = true

[dev-dependencies]
aes_parser.workspace = true
aes_testing.workspace = true

indoc.workspace = true
insta.workspace = true
proptest.workspace = true
