[package]
name = "aes_testing"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
include = ["/src"]
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[dependencies]
aes_allocator.workspace = true
aes_ast.workspace = true
aes_foundation.workspace = true
